2006-03-01  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(precision): Fixed overflow problem with large numbers.
	(longValueExact): New method.
	(intValueExact): Likewise.
	(byteValueExact): Likewise.
	(shortValueExact): Likewise.

2006-03-01  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(remainder(BigDecimal)): New method.
	(divideAndRemainder(BigDecimal)): Likewise.
	(divideToIntegralValue(BigDecimal)): Likewise.
	(floor): New implementation method.

2006-02-28  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(divide(BigDecimal, int, RoundingMode)): New method.
	(divide(BigDecimal, RoundingMode)): Likewise.
	(divide(BigDecimal, int, int)): Removed incorrect throwing of exception
	when the new scale is < 0.
	(setScale(int, RoundingMode)): New method.
	(ulp): Likewise.

2006-02-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java: Replaced occurences of BigInteger.valueOf
	with BigInteger.ZERO, BigInteger.ONE, BigInteger.TEN where appropriate.
	(add(BigDecimal, MathContext)): New method.
	(subtract(BigDecimal, MathContext)): Likewise.
	(precision): Fixed to correctly handle BigIntegers with more than 19
	digits.
	(pow(int, MathContext)): New method.

2006-02-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java: Added @throws clause to constructors.
	(mathContext): Removed this unneeded field.
	(BigDecimal(int, MathContext)): New constructor.
	(BigDecimal(BigInteger, int, MathContext)): Likewise.
	(multiply(BigDecimal, MathContext)): New method.
	(negate(MathContext)): Likewise.
	(plus(MathContext)): Likewise.
	(numDigitsInLong): Fixed to properly handle negatives.
	
2006-02-25  Chris Burdess  <dog@gnu.org>
  
	* gnu/java/net/CRLFInputStream.java,
	  gnu/java/net/LineInputStream.java: Streams that use mark
	  capabilities on the underlying stream do not expose mark
	  functionality themselves.